--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -11,22 +11,79 @@
   font-size: 75px;
 }
 
-/* Media Queries */
+/* slide-in animations of the things in left column */
+#header__subheading,
+.app__wrapper_info h1,
+.app__wrapper_info p,
+.app__wrapper_info button {
+  animation: slide-in-from-left-side 1.45s ease-in;
+}
+/* slide-in animation of the image in right column */
+.app__wrapper_img img {
+  animation: slide-in-from-right-side 1.45s ease-in;
+}
 
-@media screen and (max-width: 2000px) {
-  .app__header-h1 {
-    font-size: 75px;
+
+/* Animations */
+@keyframes slide-in-from-right-side {
+  0% {
+    transform: translateX(200%);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 
-@media screen and (max-width: 1150px) {
+@keyframes slide-in-from-left-side {
+  0% {
+    transform: translateX(-200%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes drop-and-fade-in {
+  0% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+/* Media Queries */
+/* Tablet (Portrait) */
+@media screen and (max-width: 1024px) {
   .app__header-h1 {
     font-size: 55px;
   }
 }
 
-@media screen and (max-width: 650px) {
+/* Mobile Phone */
+@media screen and (max-width: 480px) {
   .app__header-h1 {
     font-size: 35px;
+  }
+  .app__wrapper_img img {
+    animation: fade-in 1.45s ease-in;
+  }
+  #header__subheading,
+  .app__wrapper_info h1,
+  .app__wrapper_info p,
+  .app__wrapper_info button {
+    animation: drop-and-fade-in 1.45s ease-in;
   }
 }
