--- a/src/App.css
+++ b/src/App.css
@@ -54,17 +54,24 @@
 
 .custom__button {
   background-color: var(--color-crimson);
-    color: var(--color-black);
-    font-family: var(--font-base);
-    font-weight: 700;
-    letter-spacing: 0.04em;
-    line-height: 28px;
-    font-size: 16px;
-    padding: 0.5rem 1.5rem;
-    border-radius: 1px;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  color: var(--color-black);
+  font-family: var(--font-base);
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  line-height: 28px;
+  font-size: 16px;
+  padding: 0.5rem 1.5rem;
+  border-radius: 1px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.custom__button:hover {
+  transform: scale(1.1);
+  /* box-shadow: 0 0 15px var(--color-golden); */
+  background-color: var(--color-golden);
 }
 
 .p__cormorant {
