--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -28,18 +28,22 @@
 @keyframes slide-in-from-right-side {
   0% {
     transform: translateX(200%);
+    opacity: 0;
   }
   100% {
     transform: translateX(0);
+    opacity: 1;
   }
 }
 
 @keyframes slide-in-from-left-side {
   0% {
     transform: translateX(-200%);
+    opacity: 0;
   }
   100% {
     transform: translateX(0);
+    opacity: 1;
   }
 }
 
