--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@
   background-attachment: fixed;
 }
 
-.app__wrapper {
+.app__wrapper,
+.app__wrapper_2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,7 +25,8 @@
   min-height: 100vh;
 }
 
-.app__wrapper_info {
+.app__wrapper_info,
+.app__wrapper_2_info {
   flex: 1;
   width: 100%;
   display: flex;
@@ -33,7 +35,8 @@
   flex-direction: column;
 }
 
-.app__wrapper_img {
+.app__wrapper_img,
+.app__wrapper_2_img {
   flex: 1;
   width: 100%;
   display: flex;
@@ -43,12 +46,14 @@
   margin-left: 2rem;
 }
 
-.app__wrapper_img-reverse {
+.app__wrapper_img-reverse,
+.app__wrapper_2_img-reverse {
   justify-content: flex-start;
   margin-right: 2rem;
 }
 
-.app__wrapper_img img {
+.app__wrapper_img img,
+.app__wrapper_2_img img {
   width: 80%;
 }
 
@@ -131,19 +136,23 @@
 }
 
 @media screen and (max-width: 1150px) {
-  .app__wrapper {
+  .app__wrapper,
+  .app__wrapper_2 {
     flex-direction: column;
   }
 
-  .app__wrapper_img {
+  .app__wrapper_img,
+  .app__wrapper_2_img {
     margin: 5rem 0 0 0;
   }
 
-  .app__wrapper_img-reverse {
+  .app__wrapper_img-reverse,
+  .app__wrapper_2_img-reverse {
     margin: 0 0 5rem 0;
   }
 
-  .app__wrapper_img img {
+  .app__wrapper_img img,
+  .app__wrapper_2_img img {
     width: 100%;
   }
 }
