--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   
   --color-golden: #DCCA87;
   --color-black: #0C0C0C;
+  --color-black-transparent: rgba(0,0,0,.75);
   --color-gray: #545454;
   --color-crimson: #F5EFDB;
   --color-grey: #AAAAAA;
