--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,18 @@
 .app__navbar {
+  position: fixed;
+  z-index: 5;
+
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-black);
+  background-color: rgba(0,0,0,0);
 
-  padding: 1rem 2rem;
+  padding: 0.9rem 3rem;
+}
+
+.app__navbar.active {
+  background: var(--color-black-transparent);
 }
 
 .app__navbar-logo {
@@ -15,7 +22,7 @@
 }
 
 .app__navbar-logo img {
-  width: 150px;
+  width: 210px;
 }
 
 .app__navbar-links {
@@ -29,29 +36,57 @@
 .app__navbar-links li {
   margin: 0 1rem;
   cursor: pointer;
+  background-color: var(--color-golden);
+  border-radius: 15px;
+  padding: .2rem 2rem;
+  color: var(--color-black);
+  font-weight: 500;
 }
 
 .app__navbar-links li:hover {
-  color: var(--color-grey)
+  color: var(--color-white)
 }
 
-.app__navbar-login {
+.app__navbar-cart {
+  padding-right: 1.5rem;
+}
+
+.app__navbar-cart_icon,
+.app__navbar-cart_icon_small {
+  cursor: pointer;
+  fill: var(--color-golden);
+  animation: svg-color-change 3s linear infinite alternate;
+}
+
+.app__navbar-cart_icon:hover,
+.app__navbar-cart_icon_small:hover {
+  fill: orange !important;
+  transform: scale(1.2);
+}
+
+.app__navbar-action {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  background-color: var(--color-golden);
+  border-radius: 15px;
+  padding: .5rem 2rem;
+  animation: bg-color-change 3s linear infinite alternate;
 }
 
-.app__navbar-login a {
+.app__navbar-action a {
   margin: 0 1rem;
   text-decoration: none;
   transition: 0.5s ease;
+  color: var(--color-black);
+  font-weight: 600;
 }
 
-.app__navbar-login a:hover {
-  border-bottom: 1px solid var(--color-golden);
+.app__navbar-action a:hover {
+  border-bottom: 1px solid var(--color-black);
 }
 
-.app__navbar-login div {
+.app__navbar-action div {
   width: 1px;
   height: 30px;
   background-color: var(--color-grey);
@@ -105,20 +140,45 @@
   color: var(--color-white);
 }
 
-@media screen and (max-width: 2000px) {
-  .app__navbar-logo img {
-    width: 210px;
+
+@keyframes svg-color-change {
+  0% {
+    fill: var(--color-golden);
+  }
+  100% {
+    fill: var(--color-white);
+    /* filter: hue-rotate(360deg); */
+  }
+}
+
+@keyframes bg-color-change {
+  0% {
+    background-color: var(--color-golden);
+  }
+  100% {
+    background-color: var(--color-white);
   }
 }
 
 
-@media screen and (max-width: 1150px) {
+
+@media screen and (max-width: 1024px) {
   .app__navbar-links {
     display: none;
+  }
+
+  .app__navbar-cart {
+    display: none;
+  }
+
+  .app__navbar-cart_icon_small{
+    margin-right: 1rem;
+    font-size: 2.4rem;
   }
   
   .app__navbar-smallscreen {
     display: flex;
+    align-items: center;
   }
 
   .app__navbar-logo img {
@@ -126,13 +186,19 @@
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 480px) {
   .app__navbar {
-    padding: 1rem;
+    padding: 0.7rem 1rem;
+    flex: 0 1;
   }
 
-  .app__navbar-login {
+  .app__navbar-action {
     display: none;
+  }
+
+  .app__navbar-cart_icon_small{
+    margin-right: .5rem;
+    font-size: 1.7rem;
   }
 
   .app__navbar-logo img {
